@startuml RestMan_ClassDiagram
!theme plain
title Hình 3.4: Biểu đồ lớp phân tích - Hệ thống RestMan

' Entity Classes
class Member {
    -id: int
    -username: String
    -password: String
    -fullName: String
    -address: String
    -birthDate: Date
    -email: String
    -phone: String
    +login()
    +logout()
    +changePassword()
}

class Customer {
    -customerId: String
    -membershipCard: String
    -registrationDate: Date
    +searchDish()
    +reserveTable()
    +orderOnline()
}

class Staff {
    -position: String
    -hireDate: Date
    -salary: double
}

class SalesStaff {
    -salesId: String
    +receiveCustomer()
    +takeOrder()
    +processPayment()
    +createMembershipCard()
    +confirmReservation()
    +confirmOnlineOrder()
}

class WarehouseStaff {
    -warehouseId: String
    +inputIngredients()
    +manageSupplier()
}

class Manager {
    -managerId: String
    -department: String
    +viewStatistics()
    +manageDish()
    +createComboMenu()
}

class Dish {
    -dishId: String
    -name: String
    -description: String
    -price: double
    -category: String
    -isAvailable: boolean
    +getDetails()
    +updatePrice()
    +setAvailability()
}

class Ingredient {
    -ingredientId: String
    -name: String
    -description: String
    -unit: String
    -currentStock: int
    -minStock: int
    +checkStock()
    +updateStock()
}

class Supplier {
    -supplierId: String
    -name: String
    -contactPerson: String
    -phone: String
    -email: String
    -address: String
    +getContactInfo()
    +updateInfo()
}

class Table {
    -tableId: String
    -name: String
    -capacity: int
    -status: String
    -location: String
    +getStatus()
    +setStatus()
    +getCapacity()
}

class Order {
    -orderId: String
    -orderDate: Date
    -status: String
    -totalAmount: double
    -customerId: String
    -tableId: String
    +calculateTotal()
    +updateStatus()
    +addDish()
}

class OrderItem {
    -orderItemId: String
    -orderId: String
    -dishId: String
    -quantity: int
    -unitPrice: double
    -subtotal: double
    +calculateSubtotal()
}

class Invoice {
    -invoiceId: String
    -orderId: String
    -issueDate: Date
    -dueDate: Date
    -totalAmount: double
    -taxAmount: double
    -finalAmount: double
    +calculateTax()
    +calculateFinalAmount()
    +printInvoice()
}

class Reservation {
    -reservationId: String
    -customerId: String
    -tableId: String
    -reservationDate: Date
    -reservationTime: String
    -numberOfGuests: int
    -status: String
    +confirmReservation()
    +cancelReservation()
}

' Relationships
Member <|-- Customer
Member <|-- Staff
Staff <|-- SalesStaff
Staff <|-- WarehouseStaff
Staff <|-- Manager

Customer ||--o{ Order : places
Customer ||--o{ Reservation : makes
Customer ||--o{ OrderItem : orders

Dish ||--o{ OrderItem : contains
Ingredient ||--o{ Dish : used_in
Supplier ||--o{ Ingredient : supplies

Table ||--o{ Order : serves
Table ||--o{ Reservation : reserved_for

Order ||--|| Invoice : generates
Order ||--o{ OrderItem : contains

SalesStaff ||--o{ Order : processes
SalesStaff ||--o{ Invoice : creates
SalesStaff ||--o{ Reservation : confirms

WarehouseStaff ||--o{ Ingredient : manages
WarehouseStaff ||--o{ Supplier : manages

Manager ||--o{ Dish : manages
Manager ||--o{ Staff : supervises

@enduml
